<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvExpression"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:padding="8dp"
        android:text=""
        android:textColor="#666666"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/tvResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="end|bottom"
        android:padding="8dp"
        android:text="@string/result_zero"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/gridButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvExpression" />

    <GridLayout
        android:id="@+id/gridButtons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:columnCount="4"
        android:rowCount="5"
        android:useDefaultMargins="false"
        android:alignmentMode="alignMargins"
        app:layout_constraintTop_toBottomOf="@id/tvResult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="1.0"
        app:layout_constraintDimensionRatio="4:5">

        <Button
            android:id="@+id/btnClear"
            style="@style/CalcButton.Operator"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/btn_clear"/>

        <Button
            android:id="@+id/btnDivide"
            style="@style/CalcButton.Operator"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/btn_divide" />

        <Button
            android:id="@+id/btnMultiply"
            style="@style/CalcButton.Operator"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/btn_multiply" />

        <Button
            android:id="@+id/btnBackspace"
            style="@style/CalcButton.Operator"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/btn_exit" />

        <Button
            android:id="@+id/btn7"
            style="@style/CalcButton"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/digit_7" />

        <Button
            android:id="@+id/btn8"
            style="@style/CalcButton"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/digit_8" />

        <Button
            android:id="@+id/btn9"
            style="@style/CalcButton"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/digit_9" />

        <Button
            android:id="@+id/btnMinus"
            style="@style/CalcButton.Operator"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/btn_minus" />

        <Button
            android:id="@+id/btn4"
            style="@style/CalcButton"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/digit_4" />

        <Button
            android:id="@+id/btn5"
            style="@style/CalcButton"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/digit_5" />

        <Button
            android:id="@+id/btn6"
            style="@style/CalcButton"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/digit_6" />

        <Button
            android:id="@+id/btnPlus"
            style="@style/CalcButton.Operator"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/btn_plus" />

        <Button
            android:id="@+id/btn1"
            style="@style/CalcButton"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/digit_1" />

        <Button
            android:id="@+id/btn2"
            style="@style/CalcButton"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/digit_2" />

        <Button
            android:id="@+id/btn3"
            style="@style/CalcButton"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/digit_3" />

        <Button
            android:id="@+id/btnEquals"
            style="@style/CalcButton.Operator"
            android:layout_columnWeight="1"
            android:layout_rowSpan="2"
            android:layout_rowWeight="2"
            android:text="@string/btn_equals" />

        <Button
            android:id="@+id/btn0"
            style="@style/CalcButton"
            android:layout_columnSpan="2"
            android:layout_columnWeight="2"
            android:layout_rowWeight="1"
            android:text="@string/digit_0" />

        <Button
            android:id="@+id/btnDot"
            style="@style/CalcButton"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/btn_dot" />
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>